# unimarkup-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md
server/: Cargo.toml
server/src/: capabilities.rs  doc_sync.rs  main.rs  semantic_tokens.rs
server/src/asynchron/: doc_sync.rs  mod.rs
server/src/semantic_tokens/: block_tokens.rs  delta_conversions.rs  inline_tokens.rs  mod.rs
server/src/sync/: doc_sync.rs  mod.rs
src/: capabilities.rs  doc_sync.rs  lib.rs  main.rs
src/asynchron/: doc_sync.rs  mod.rs
src/sem_tokens/: mod.rs  token_type.rs
src/semantic_tokens/: block_tokens.rs  delta_conversions.rs  inline_tokens.rs  mod.rs
tests/: mod.rs
tests/semantic_tokens/: block_tokens.rs  inline_tokens.rs  mod.rs  multiline_tokens.rs  multiple_blocks.rs
tests/semantic_tokens/snapshots/: r#mod__semantic_tokens__block_tokens__heading_token_type.snap  r#mod__semantic_tokens__block_tokens__heading_token_type_with_bold_token_modifier.snap  r#mod__semantic_tokens__block_tokens__heading_token_type_with_bold_token_modifier.snap.new  r#mod__semantic_tokens__inline_tokens__bold_italic_token_modifier.snap  r#mod__semantic_tokens__inline_tokens__bold_token_modifier_after_plain.snap  r#mod__semantic_tokens__inline_tokens__bold_token_modifier_before_plain.snap  r#mod__semantic_tokens__inline_tokens__italic_token_modifier.snap  r#mod__semantic_tokens__multiline_tokens__bold_token_modifier_over_two_lines.snap  (+2 more)
vscode/: package-lock.json  package.json
vscode/assets/: preview_icon_light.ai
vscode/src/: extension.ts
