[package]
name = "unimarkup-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unimarkup-core = { path = "../unimarkup-rs/core/", version = "0" }
unimarkup-inline = { path = "../unimarkup-rs/inline/", version = "0" }
lsp-server = "0.7.0"
lsp-types = "0.94.0"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
insta = {version = "1.29.0", features = ["serde"]}

# Compile snapshot testing library "insta" with "release" flag
# so that it runs faster
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
