[package]
name = "unimarkup_ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unimarkup_core = { path = "../../unimarkup-rs/core/" }
unimarkup_inline = { path = "../../unimarkup-rs/inline/" }
lsp-server = "0.5.2"
lsp-types = "0.92.0"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
